# arm_ik_wbc

./: CMakeLists.txt  readme.md
configs/: arm.yaml  cx300s.yaml  dofarm.yaml  kinova_7dof.yaml  vx300.yaml  vx300s.yaml
demos/: ik_wbc_arm_demo.py  ik_wbc_arm_nolimbsim_demo.py  ik_wbc_arm_static_demo.py  test.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
models/cx300s/: CMakeLists.txt  package.xml
models/cx300s/cx300s_meshes/: base.stl  forearm.stl  shoulder.stl  wrist.stl  wrist2.stl
models/cx300s/urdf/: cx300s.urdf
models/dofarm/: dofarm.urdf
models/dofarm/dofarm/: ee.stl  ee_wrist.stl
models/kinova_7dof/urdf/: kinova_7dof.urdf
models/plane/: plane.urdf
python/arm_ik_wbc/: QP_Wrapper.py  cartesian_constraint.py  collision_constraint.py  com_cartesian_task.py  com_stability_constraint.py  com_stability_task.py  ik_wbc.py  inverse_kinematics_task.py  joint_task.py  local_cartesian_constraint.py  trajectory_planner.py
